Fix CSS border radiuses of the collapseable technologies

--- a/technologies/css/my_styles.css
+++ b/technologies/css/my_styles.css
@@ -36,14 +36,33 @@ span {
     border-radius: 10px;
 }
 
-.collapseable_textbox {
-    border-radius: 10px;
-}
-
 .collapse_heading {
     border-radius: 10px;
 }
 
 .black_ink {
     color: black;
+}
+
+.accordion-item:first-of-type {
+    border-radius: 10px;
+}
+
+.accordion-item:last-of-type {
+    border-radius: 10px;
+}
+
+.accordion-item:first-of-type .accordion-button {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+}
+
+.accordion-item:last-of-type .accordion-collapse {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
+}
+
+.accordion-item:last-of-type .accordion-button.collapsed {
+    border-bottom-left-radius: 10px;
+    border-bottom-right-radius: 10px;
 }
